test/simple/correct/EnumFromTo4.hs
module EnumFromTo4 where

main :: [Int]
main = list
  where
    list :: [Int]
    list = [50,53..60]
