test/simple/typeerrors/Heuristics/AppInsert1.hs
module AppInsert1 where

main :: [Int]
main = filter [1..]
